# Cpp_ChessBot

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  ElwellBot.sln  ElwellBotGui.py  README.md  game.py
src/: bitboard.cpp  bitboard.h  bitscan.h  control.cpp  control.h  data.cpp  data.h  engine.cpp  engine.h  eval.cpp  eval.h  helpers.cpp  helpers.h  main.cpp  move.cpp  move.h  move_gen.cpp  move_gen.h  search.cpp  search.h  testing.cpp  testing.h
